option('build_curl_exe', type: 'boolean', value: false, description: 'Build curl executable')
option('enable_debug', type: 'boolean', value: false, description: 'Enable curl debug features')
option('enable_curldebug', type: 'boolean', value: false, description: 'Build with TrackMemory feature enabled')
option('enable_ares', type: 'boolean', value: false, description: 'Enable c-ares support')
option('enable_threaded_resolver', type: 'boolean', value: true, description: 'Enable threaded DNS lookup with c-ares')

option('http_only', type: 'boolean', value: false, description: 'disables all protocols except HTTP (This overrides all curl_disable_* options)')
option('curl_disable_ftp', type: 'boolean', value: false, description: 'disables FTP')
option('curl_disable_ldap', type: 'boolean', value: false, description: 'disables LDAP')
option('curl_disable_telnet', type: 'boolean', value: false, description: 'disables TELNET')
option('curl_disable_dict', type: 'boolean', value: false, description: 'disables DICT')
option('curl_disable_file', type: 'boolean', value: false, description: 'disables FILE')
option('curl_disable_tftp', type: 'boolean', value: false, description: 'disables TFTP')
option('curl_disable_http', type: 'boolean', value: false, description: 'disables HTTP')
option('curl_disable_ldaps', type: 'boolean', value: false, description: 'disables LDAPS')
option('curl_disable_rtsp', type: 'boolean', value: false, description: 'disables RTSP')
option('curl_disable_proxy', type: 'boolean', value: false, description: 'disables proxy')
option('curl_disable_pop3', type: 'boolean', value: false, description: 'disables POP3')
option('curl_disable_imap', type: 'boolean', value: false, description: 'disables IMAP')
option('curl_disable_smtp', type: 'boolean', value: false, description: 'disables SMTP')
option('curl_disable_gopher', type: 'boolean', value: false, description: 'disables Gopher')
option('curl_disable_mqtt', type: 'boolean', value: false, description: 'disables MQTT')

option('curl_disable_altsvc', type: 'boolean', value: false, description: 'to disable alt-svc support')
option('curl_disable_hsts', type: 'boolean', value: false, description: 'to disable HSTS support')
option('curl_disable_cookies', type: 'boolean', value: false, description: 'to disable cookies support')
option('curl_disable_crypto_auth', type: 'boolean', value: false, description: 'to disable cryptographic authentication')
option('curl_disable_verbose_strings', type: 'boolean', value: false, description: 'to disable verbose strings')
option('enable_ipv6', type: 'boolean', value: true, description: 'Enable IPv6 support')

option('ssl_backend', type: 'array', choices: ['openssl', 'wolfssl', 'gnutls', 'nss', 'bearssl', 'mbedtls', 'schannel', 'sectransp'], value: ['openssl'], description: 'SSL/TLS backend(s)')
option('curl_disable_openssl_auto_load_config', type: 'boolean', value: false, description: 'Disable automatic loading of OpenSSL configuration')

# Windows options
option('curl_target_windows_version', type: 'combo', choices: ['0x0A00', '0x0603', '0x0602', '0x0600', '0x0600', '0x0502', '0x0501'], value: '0x0501', description: 'Minimum target Windows version as hex string')
option('enable_unicode', type: 'boolean', value: false, description: 'Use the Unicode version of the Windows API functions')
option('curl_windows_sspi', type: 'boolean', value: true, description: 'Use Windows libraries to allow NTLM authentication without OpenSSL')
option('use_win32_ldap', type: 'boolean', value: true, description: 'Use Windows LDAP implementation')
option('use_openldap', type: 'boolean', value: false, description: 'Use OpenLDAP code')

option('use_nghttp2', type: 'boolean', value: false, description: 'Use Nghttp2 library')
option('http3_backend', type: 'combo', choices: ['none', 'ngtcp2', 'quiche'], value: 'none', description: 'HTTP/3 backend. You can choose between ngtcp2+nghttp3 and Quiche')

option('use_libidn2', type: 'boolean', value: false, description: 'Use libidn2 for IDN support')
